# small-kv

./: CMakeLists.txt  LICENSE  README.md  config.mk  makefile
src/: main.cpp  makefile
src/database/: database.cpp  database.hpp  internal_types.hpp  makefile
src/database/glue/: config.hpp  glue.hpp  glue_x86_stdio.cpp
src/proto_types/: .gitignore  CMakeLists.txt  makefile
src/small-kv/: CMakeLists.txt  kv.cpp  kv.hpp  makefile
